cmake_minimum_required(VERSION 3.12)
project(LeetCodeProject)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCodeProject main.cpp 1-twosum.cpp 1-twosum.h 2-addtwonumbers.cpp 2-addtwonumbers.h 3-longestsubstring.cpp 3-longestsubstring.h 4-medianoftwosortedarray.cpp 4-medianoftwosortedarray.h 5-LongestPalindromicSubstring.cpp 5-LongestPalindromicSubstring.h 6-ZigZagConversion.cpp 6-ZigZagConversion.h 7-ReverseInteger.cpp 7-ReverseInteger.h 8-StringToInteger.cpp 8-StringToInteger.h 9-PalindromeNumber.cpp 9-PalindromeNumber.h 10-RegularExpressionMatching.cpp 10-RegularExpressionMatching.h)